TQTM-1195 Error message is not aligned properly issue resolved

--- a/src/cart/components/CheckOutPage.css
+++ b/src/cart/components/CheckOutPage.css
@@ -145,7 +145,7 @@
   }
   .paymentFailureCoupon {
     width: 100%;
-    height: 80px;
+    /* height: 80px; */
     background: #ffd2d8;
   }
   .paymentFailure {
@@ -178,7 +178,7 @@
   .paymentCouponText {
     width: 75%;
     height: 100%;
-    padding-top: 10px;
+    padding: 10px 0;
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
@@ -195,6 +195,9 @@
     display: flex;
     justify-content: flex-end;
     align-items: center;
+  }
+  .paymentFailureCoupon .paymentFailButtonHolder {
+    padding-top: 2%;
   }
   .closeButton {
     width: auto;
